--- a/ijkplayer/src/main/res/layout/simple_player_view_player.xml
+++ b/ijkplayer/src/main/res/layout/simple_player_view_player.xml
@@ -60,8 +60,17 @@
         android:layout_height="match_parent"
         android:background="#33000000"
         android:gravity="center"
+        android:orientation="vertical"
         android:visibility="gone">
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="您正在使用移动网络播放视频\n可能产生较高流量费用"
+            android:textColor="@android:color/white"/>
         <TextView
             android:id="@+id/app_video_netTie_icon"
             android:layout_width="wrap_content"
